# namid

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/core/: discover.rs  rename.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/tui/steps/: execute.rs  folder.rs  preview.rs  rules.rs
tests/: integration.rs
